fix spacing issue on cards in new view

--- a/app/assets/stylesheets/card_styles.css
+++ b/app/assets/stylesheets/card_styles.css
@@ -1,3 +1,7 @@
+.is-a {
+  display: inline-block;
+}
+
 .card-buttons button {
   display: inline-block;
   margin-top: 15px;
